# extra

./: .env.example  .gitignore  .mintignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  docs.json  entrypoint.sh  mint.json  package-lock.json  package.json  pyproject.toml  release-please-config.json
.ai/: README.md
.ai/skills/: architecture-review.md  code-review.md  mcp-tools.md  project-architecture.md  prompt-rendering.md  senior-python-engineering.md  sidecar-auth-context.md  testing.md  yaml-schema.md
.claude/: README.md  settings.json
.claude/agents/: architect.md  code-reviewer.md  documentation-writer.md  test-engineer.md
.claude/skills/: architecture-review.md  code-review.md  documentation.md  git-workflow.md  project-architecture.md  senior-python-engineering.md  yaml-schema.md
.codex/skills/: mcp-tools.md  prompt-rendering.md  refactoring.md  runtime-engine.md  sidecar-auth-context.md  skill-authoring.md  testing.md
.cursor/rules/: architecture-review.mdc  code-review.mdc  documentation.mdc  git-workflow.mdc  mcp-tools.mdc  project-architecture.mdc  prompt-rendering.mdc  refactoring.mdc  runtime-engine.mdc  senior-python-engineering.mdc  sidecar-auth-context.mdc  skill-authoring.mdc  testing.mdc  yaml-schema.mdc
.github/workflows/: ci.yml  docker-publish.yml  release-please.yml
docs/: ARCHITECTURE.md  CLAUDE_CODE_WORKFLOW.md  DEVELOPMENT_WORKFLOW.md  EXECUTION_LIMITS.md  HUMAN_IN_THE_LOOP.md  MCP_AND_TOOLS.md  PROMPT_RENDERING.md  README.md  ROADMAP.md  RUNTIME_HOOKS.md  RUNTIME_LIFECYCLE.md  SECURITY_SPRINTS.md  SIDECAR_CONTEXT_AUTH.md  WIDGET.md  YAML_SPEC.md  api.mdx  architecture.mdx  cli.mdx  execution-limits.mdx  human-in-the-loop.mdx  introduction.mdx  mcp-and-tools.mdx  observability.mdx  plugins.mdx  prompt-rendering.mdx  quickstart.mdx  roadmap.mdx  runtime-hooks.mdx  tutorial.mdx  widget.mdx  yaml-spec.mdx
docs/adr/: 0001-runtime-engine-created-once.md  0002-yaml-is-compiled-not-executed-directly.md  0003-client-specific-logic-lives-in-sidecar.md  0005-prompt-rendering-and-context-resolution.md  0006-reusable-agent-definitions-and-hierarchy-instances.md  0007-build-phase-separate-from-runtime-phase.md  0008-model-access-via-langchain-init-chat-model.md  0010-runtime-hooks.md
examples/: __init__.py  agents.yml  config.schema.json  hooks_mcp_auth_agents.yml  local_mcp_agent.yml  local_mcp_agent_customers.yml  local_mcp_agent_docs_query.yml  local_mcp_agent_invoices.yml  widget_sub_agent_demo.yml
examples/enterprise-knowledge-assistant/: .env.example  README.md  agents.yaml  local_mcp_agents.yaml  run_local_mcp_approval.py
examples/full-test/: agents.yaml
examples/hitl-approval-demo/: README.md  agents.yml  demo_state.py  run_demo.py
examples/hooks/: hooks_mcp_auth_agents.yml
examples/interactive_mcp_control/: .env.example  README.md  agent.yaml  approval_console.py  commands.py  history.py  run.py  session_approvals.py
examples/local_mcp_server/: README.md  __init__.py  server.py  tags.py
scripts/: sync_skills.py
tasks/: 0001-repository-foundation.md  0002-yaml-schema-and-validation.md  0003-compiled-agent-graph.md  0004-runtime-engine.md  0005-prompt-rendering.md  0006-sidecar-auth-context.md  0007-mcp-tools-and-permissions.md  0008-cli.md  0009-api-server.md  0010-docker-deployment.md  0011-observability-and-tracing.md  0012-tests-and-quality-gates.md  README.md
tests/: __init__.py  conftest.py  test_logging_setup.py  test_package_import.py  test_sprint0_static_checks.py  test_sync_skills.py
(+294 files in other folders)
