# Project + tooling configuration for the Declarative Agent Platform.
#
# Foundation phase note: this file establishes packaging and the toolchain
# (ruff, mypy, pytest). YAML loading/validation is implemented; later product
# features (compiler, runtime, prompts, sidecar, tools, API) are built
# task-by-task (see tasks/).

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry]
package-mode = false

[project]
name = "agent-engine"
description = "A declarative platform for building AI agent systems (foundation phase)."
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = { text = "TBD" }
authors = [{ name = "The Declarative Agent Platform contributors" }]
keywords = ["ai", "agents", "llm", "yaml", "declarative", "orchestration", "mcp"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dynamic = ["version"]

# Runtime dependencies the platform will use as features land. Declaring them now
# keeps the environment consistent; importing them is deferred to later tasks.
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "jsonschema>=4.22",
    "typer>=0.12",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "jinja2>=3.1",
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "mcp>=1.27,<2",
    "langchain-mcp-adapters>=0.1",
    "python-dotenv>=1.0",
    "langchain-anthropic (>=1.4.5,<2.0.0)",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
]
# Provider integrations are optional — install the one your YAML's
# `model.provider` references. `init_chat_model` imports it lazily.
anthropic = ["langchain-anthropic>=0.3"]
openai = ["langchain-openai>=0.3"]

# CLI entrypoint. `agentctl` is the working CLI name used throughout the docs
# (see docs/ARCHITECTURE.md and docs/ROADMAP.md); `agent-platform` is provided as
# an alias. The validation command is implemented; graph/run/serve commands are
# deferred to later tasks.
[project.scripts]
agentctl = "agentctl.main:cli"

[project.urls]
Documentation = "https://github.com/example/agent-engine/tree/main/docs"

[tool.hatch.version]
path = "src/agent_engine/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_engine"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# A pragmatic senior-level default set: pyflakes/pycodestyle, imports, bugbear,
# pyupgrade, simplify, and a few quality rules.
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # asserts are expected in tests

[tool.mypy]
# Strict-but-practical baseline: meaningful checks without making an early-stage
# package painful. Tightened toward full strictness as the codebase grows.
python_version = "3.11"
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
